objects/VehicleFeature__c.object
<CustomObject>
    <fields>
        <fullName>FVehicles__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related vehicle</description>
        <label>FVehicles</label>
        <referenceTo>FVehicles__c</referenceTo>
        <relationshipLabel>VehicleFeatures</relationshipLabel>
        <relationshipName>VehicleFeatures</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Feature_Name__c</fullName>
        <label>Feature Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Heated Seats</fullName>
                </value>
                <value>
                    <fullName>Navigation</fullName>
                </value>
                <value>
                    <fullName>Sunroof</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Standard__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether it&apos;s a standard feature</description>
        <label>Is Standard</label>
        <type>Checkbox</type>
    </fields>
    <label>VehicleFeature</label>
    <nameField>
        <label>VehicleFeature Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>VehicleFeatures</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>